--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confloos Epita</title>
+    <title>Confloose Epita</title>
     <link rel="shortcut icon" type="image/x-icon" href="image/Attack on titouan.png" />
 
 </head>
 <body>
+<ul class="listlink">
+    <li><a href="index.html"><img src="image/Attack on titouan.png" alt="Logo Attack on titouan" class="logo"></a></li>
+    <li>Le Jeu</li>
+    <li>Les personnages et monstres</li>
+    <li>Installation</li>
+    <li>Le groupe</li>
+</ul>
 <div>
     <p>NTM Jacques</p>
 </div>
