--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confloose Epita</title>
     <link rel="shortcut icon" type="image/x-icon" href="image/Attack on titouan.png" />
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 <ul class="listlink">
     <li><a href="index.html"><img src="image/Attack on titouan.png" alt="Logo Attack on titouan" class="logo"></a></li>
-    <li>Le Jeu</li>
-    <li>Les personnages et monstres</li>
-    <li>Installation</li>
-    <li>Le groupe</li>
+    <li><a href="Groupe.html"class="clicked">Écran</a></li>
+    <li><a href="Groupe.html"class="clicked">Clavier/souris</a></li>
+    <li><a href="Groupe.html"class="clicked">Mail</a></li>
 </ul>
 <div>
     <p>NTM Jacques</p>
