adding the two audio files and a link to them

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </ul>
 <div>
     <p>NTM Jacques</p>
-	<a href="oui oui baguette.wav" download="oui oui baguette.wav">Download Text</a>
+	<a href="oui oui baguette.wav" download="oui oui baguette.wav">Oui Oui baguette</a>
+	<a href="ohYeah.wav" download="ohYeah.wav">Oh yeah</a>
 
 </div>
 </body>
